--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^7.1.3",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "swagger-ui-react": "^5.19.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
